Fix squished layout on mobile

--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -98,4 +98,6 @@ h6 {
 
 p {
   margin-bottom: 2.3rem;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
